<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background3"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">


    <ImageView
        android:id="@+id/login_icon_logo"
        android:layout_width="153dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/denglu_logo_new" />

    <LinearLayout
        android:id="@+id/login_activity_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_activity_username_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="10dp"
            android:background="@drawable/denglu_shangbankuang"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/login_activity_password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/denglu_xiabankuang"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/darkgray" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/login_activity_autologin_chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_activity_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/autologin"
        android:textColor="@color/light_gray" />

    <ImageButton
        android:id="@+id/login_activity_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_activity_autologin_chb"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/denglu_denglubutton"
        android:textColor="@color/lightgray" />

</RelativeLayout>
