<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/campusMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/royalblue"
        android:paddingBottom="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_middle"
        android:paddingTop="@dimen/padding_small"
        android:text="在校信息"
        android:textColor="@color/white"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_name_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="@dimen/padding_small"
        android:layout_below="@id/campusMessage">

        <TextView
            android:id="@+id/contact_detail_activity_name_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small" />

        <TextView
            android:id="@+id/contact_detail_activity_gender_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_toRightOf="@id/contact_detail_activity_name_txv" />

        <TextView
            android:id="@+id/contact_detail_activity_grade_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_toRightOf="@id/contact_detail_activity_gender_txv" />

        <TextView
            android:id="@+id/contact_detail_activity_major_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_toRightOf="@id/contact_detail_activity_grade_txv" />
    </RelativeLayout>

    <TextView
        android:id="@+id/contactMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/royalblue"
        android:paddingBottom="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_middle"
        android:paddingTop="@dimen/padding_small"
        android:text="联系方式"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_below="@id/contact_detail_activity_name_area" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_number_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactMessage"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/contact_detail_activity_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_detail_mobile"
            android:layout_marginTop="15dip" />

        <TextView
            android:id="@+id/contact_detail_activity_mobile_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="35dip"
            android:layout_toRightOf="@id/contact_detail_activity_mobile" />

        <ImageButton
            android:id="@+id/contact_detail_activity_mobile_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/contact_detail_activity_message_ibtn"
            android:contentDescription="@string/contact_detail_imagebutton_call"
            android:src="@android:drawable/ic_menu_call" />

        <ImageButton
            android:id="@+id/contact_detail_activity_message_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/contact_detail_imagebutton_message"
            android:src="@android:drawable/sym_action_chat" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_detail_activity_dividerOne"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contact_detail_activity_number_area"
        android:background="?android:attr/dividerHorizontal" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_email_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_detail_activity_dividerOne"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/contact_detail_activity_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/contact_detail_email" />

        <TextView
            android:id="@+id/contact_detail_activity_email_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="25dip"
            android:layout_toRightOf="@id/contact_detail_activity_email" />

        <ImageButton
            android:id="@+id/contact_detail_activity_email_ibtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/contact_detail_imagebutton_email"
            android:src="@android:drawable/sym_action_email" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_detail_activity_dividerTwo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contact_detail_activity_email_area"
        android:background="?android:attr/dividerHorizontal" />

    <TextView
        android:id="@+id/jobTitleMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/royalblue"
        android:paddingBottom="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_middle"
        android:paddingTop="@dimen/padding_small"
        android:text="职场信息"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_below="@id/contact_detail_activity_dividerTwo" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_city_area"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@id/jobTitleMessage"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/contact_detail_activity_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_detail_city" />

        <TextView
            android:id="@+id/contact_detail_activity_city_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@id/contact_detail_activity_city" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_detail_activity_dividerThree"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contact_detail_activity_city_area"
        android:background="?android:attr/dividerHorizontal" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_company_area"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@id/contact_detail_activity_dividerThree"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/contact_detail_activity_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_detail_company" />

        <TextView
            android:id="@+id/contact_detail_activity_company_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_toRightOf="@id/contact_detail_activity_company" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_detail_activity_dividerFour"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contact_detail_activity_company_area"
        android:background="?android:attr/dividerHorizontal" />

    <RelativeLayout
        android:id="@+id/contact_detail_activity_position_area"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@id/contact_detail_activity_dividerFour"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/contact_detail_activity_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_detail_position" />

        <TextView
            android:id="@+id/contact_detail_activity_position_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@id/contact_detail_activity_position" />
    </RelativeLayout>

    <View
        android:id="@+id/contact_detail_activity_dividerFive"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/contact_detail_activity_position_area"
        android:background="?android:attr/dividerHorizontal" />

</RelativeLayout>
